video section perfectly done

--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
 
     </section>
 
+    <section>
+        <div class="vdo-part">
+            <div class="textt">
+                <h3 class="t1">A Simple Perfect Place<br> To Get Lost</h3>
+                <p class="t2">If you're going from one place to another, you're travelling. People love to go travelling to see new places and experience different cultures.</p>
+                <ul class="t3">
+                    <li>Some people prefer a hilly area for travelling while the others like travelling to places with beaches.</li>
+                    <li>In this travelling essay, we will look at the importance of travelling and how it has changed ever since the old times. </li>
+                </ul>
+                <button class="vdo-btn">See More</button>
+
+            </div>
+            <div class="vdo">
+                <video controls src="video/stock-footage-slow-motion-lens-flare-low-angle-close-up-newly-engaged-digital-nomads-carry-their-luggage.webm"></video>
+
+
+            </div>
+
+        </div>
+    </section>
+
         
 
     </main>
