--- a/index.html
+++ b/index.html
@@ -136,30 +136,30 @@
             <div class="deals-img">
                 <img class="di" src="Images/Group 39.png">
                 <div id="emni" class="img-text">
-                    <i class="fa-solid fa-earth-americas"></i>7day 6night<i class="fa-solid fa-users"></i>max:10 <i class="fa-solid fa-location-dot"></i>India
+                    <i style="color: orangered;" class="fa-solid fa-earth-americas"></i>7day 6night<i style="color: orangered;" class="fa-solid fa-users"></i>max:10 <i style="color: orangered;" class="fa-solid fa-location-dot"></i>India
                     <h3>Tour to Kolkata</h3>
                     <p>One of the oldest civilisations in the world, India is a mosaic of multicultural experiences. With a rich heritage and myriad attractions, the country is among the most popular tourist destinations in the world.</p>
-                    <p> Price: $1300-$1500 </p>
+                    <p style="color: orangered;"> Price: $1300-$1500 </p>
                     <button class="vdo-btn">Book Now</button>
                 </div>
             </div>
             <div class="deals-img">
                 <img src="Images/Group 40.png">
                 <div class="img-text">
-                    <i class="fa-solid fa-earth-americas"></i>7day 6night<i class="fa-solid fa-users"></i>max:10 <i class="fa-solid fa-location-dot"></i>India
+                    <i style="color: orangered;" class="fa-solid fa-earth-americas"></i>7day 6night<i style="color: orangered;"class="fa-solid fa-users"></i>max:10 <i style="color: orangered;" class="fa-solid fa-location-dot"></i>India
                     <h3>Tour to Kolkata</h3>
                     <p>One of the oldest civilisations in the world, India is a mosaic of multicultural experiences. With a rich heritage and myriad attractions, the country is among the most popular tourist destinations in the world.</p>
-                    <p> Price: $1300-$1500 </p>
+                    <p style="color: orangered;"> Price: $1300-$1500 </p>
                     <button class="vdo-btn">Book Now</button>
                 </div>
         </div>
         <div class="deals-img">
             <img src="Images/Group 39.png">
             <div  id="emni" class="img-text">
-                <i class="fa-solid fa-earth-americas"></i>7day 6night<i class="fa-solid fa-users"></i>max:10 <i class="fa-solid fa-location-dot"></i>India
+                <i style="color: orangered;" class="fa-solid fa-earth-americas"></i>7day 6night<i style="color: orangered;"class="fa-solid fa-users"></i>max:10 <i style="color: orangered;" class="fa-solid fa-location-dot"></i>India
                 <h3>Tour to Kolkata</h3>
                 <p>One of the oldest civilisations in the world, India is a mosaic of multicultural experiences. With a rich heritage and myriad attractions, the country is among the most popular tourist destinations in the world.</p>
-                <p> Price: $1300-$1500 </p>
+                <p style="color: orangered;"> Price: $1300-$1500 </p>
                 <button class="vdo-btn">Book Now</button>
             </div>
         </div>
